@@ -2,6 +2,7 @@ Version 1.1.0 (2025-11-04):
 	- added support for getting VM status (voltages, currents, temperatures)
 	- don't request resending unexpected packet when waiting for AIT
 	- add counter to LED source status printouts (debug loglevel)
+	- catch eSerialReadTimeout exception in measureVM
 
 Version 1.0.6: (2025-10-09)
 	- test_firmware_update loglevel bugfix
